# StarRuler2-Source

./: .gitignore  CMakeLists.txt
cmake/: BuildTypeConfig.cmake  FindVorbis.cmake
source/: CMakeLists.txt
source/angelscript/: CMakeLists.txt
source/as_addons/: CMakeLists.txt
source/as_addons/source/: scriptstdstring.cpp
source/game/compat/: gl.h
source/game/main/: initialization.cpp  logging.cpp
source/game/os/: glfw_driver.cpp  glfw_driver.h  sdl2_driver.cpp  sdl2_driver.h
source/game/render/: font_ft2.cpp
source/game/scripts/: bind_joystick.cpp
source/libircclient/: CMakeLists.txt  config.h.cmake
source/libircclient/src/: colors.c  colors.h  config.h  dcc.c  dcc.h  errors.c  errors.h  libircclient.c  portable.c  portable.h  session.h  sockets.c  sockets.h  ssl.c  ssl.h  utils.c  utils.h
source/network/: CMakeLists.txt
source/os/: CMakeLists.txt
source/sound/: CMakeLists.txt
source/sound/source/: CSSOgg.cpp
source/util/: CMakeLists.txt
